添加quickstart 添加注释 去除私有的依赖包

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
 		<module>baymax-test</module>
 		<module>baymax-sequence</module>
         <module>baymax-spring</module>
-    </modules>
+		<module>baymax-quickstart</module>
+	</modules>
 
 	<build>
 		<plugins>
