增加存代码的路由策略配置

--- a/baymax-test/src/main/resources/jdbc.properties
+++ b/baymax-test/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.druid.url=jdbc:mysql://localhost:3306/ds_0?useUnicode=true&characterEncoding=GBK
 jdbc.druid.user=root
-jdbc.druid.password=.sidawei
+jdbc.druid.password=root
 jdbc.druid.filters=stat
 jdbc.druid.maxActive=20
 jdbc.druid.initialSize=1
@@ -17,7 +17,7 @@ jdbc.druid.maxOpenPreparedStatements=20
 
 jdbc.druid.p2.url=jdbc:mysql://localhost:3306/ds_1?useUnicode=true&characterEncoding=GBK
 jdbc.druid.p2.user=root
-jdbc.druid.p2.password=.sidawei
+jdbc.druid.p2.password=root
 jdbc.druid.p2.filters=stat
 jdbc.druid.p2.maxActive=20
 jdbc.druid.p2.initialSize=1
