--- a/baymax-test/pom.xml
+++ b/baymax-test/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>com.tongbanjie.baymax</groupId>
 		<artifactId>baymax</artifactId>
-		<version>3.0.0</version>
+		<version>3.0.1</version>
 	</parent>
 
 	<artifactId>baymax-test</artifactId>
@@ -128,7 +128,7 @@
         <dependency>
             <groupId>com.tongbanjie.baymax</groupId>
             <artifactId>baymax-spring</artifactId>
-            <version>3.0.0</version>
+            <version>${baymax.version}</version>
         </dependency>
 
 	</dependencies>
