--- a/baymax-spring/pom.xml
+++ b/baymax-spring/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>baymax</artifactId>
         <groupId>com.tongbanjie.baymax</groupId>
-        <version>3.0.1</version>
+        <version>3.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.tongbanjie.baymax</groupId>
             <artifactId>baymax-core</artifactId>
-            <version>3.0.0</version>
+            <version>${baymax.version}</version>
         </dependency>
 
         <dependency>
